--- a/MVCCoreDemo/appsettings.json
+++ b/MVCCoreDemo/appsettings.json
@@ -1,5 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=GymManagement;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "ConfigKey": {
+    "WebUrl": "http://localhost:44392/"
   }
 }
